hphp/hack/test/typecheck/classname/typename_no_new.php.exp
File "typename_no_new.php", line 13, characters 10-17:
Don't use dynamic classes (Typing[4125])
